# dreg

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: deploy.yml
book/: README.md
crates/dreg-core/: Cargo.toml
crates/dreg-core/src/: buffer.rs  context.rs  input.rs  lib.rs  primitives.rs  style.rs
crates/dreg-crossterm/: Cargo.toml
crates/dreg-crossterm/src/: lib.rs
crates/dreg-term/: Cargo.toml
crates/dreg-term/src/: lib.rs
crates/dreg-wasm/: Cargo.toml
crates/dreg-wasm/src/: event_handlers.rs  lib.rs  util.rs
doc/: SUMMARY.md
dreg/: Cargo.toml
dreg-core/: Cargo.toml
dreg-core/src/: lib.rs  text.rs
dreg-native/: Cargo.toml
dreg-term/: Cargo.toml
dreg-term/src/: lib.rs
dreg-wasm/: Cargo.toml
dreg-wasm/src/: lib.rs
dreg-web/: Cargo.toml
dreg/src/: lib.rs  platform.rs
dreg/src/platform/: native.rs  web.rs
examples/editor/: main.rs  sample.txt
examples/quickstart/: main.rs
showcase/: Cargo.toml
showcase/src/: main.rs
src/: anim.rs  block.rs  buffer.rs  ctx.rs  image.rs  label.rs  layout.rs  lib.rs  platform.rs  primitives.rs  program.rs  rendering.rs  shapes.rs  style.rs  terminal.rs  types.rs
src/image/: kitty.rs
src/platform/: native.rs  terminal.rs  web.rs
src/rendering/: shapes.rs
src/shapes/: line.rs
src/types/: area.rs  buffer.rs  cell.rs  color.rs  command.rs  frame.rs  input.rs  modifier.rs  style.rs  text.rs  text_modifier.rs
