[package]
name = "dreg"
version = "0.3.0"
authors = ["Matthew Norman"]
edition = "2021"
description = "A simple text-based user interface library"
readme = "README.md"
homepage = "https://github.com/rtthw/dreg"
repository = "https://github.com/rtthw/dreg"
license = "MIT"

[features]
default = ["native", "terminal", "web"]
native = ["dep:glyphon", "dep:pollster", "dep:wgpu", "dep:winit"]
terminal = ["dep:crossterm"]
web = []

[dependencies]
bitflags = "2"
compact_str = "0.8"
crossterm = { version = "0.28", optional = true }
glyphon = { version = "0.8", optional = true }
pollster = { version = "0.4", optional = true }
wgpu = { version = "24", optional = true }
winit = { version = "0.30", optional = true }
