[workspace]
members = ["showcase"]

[package]
name = "dreg"
version = "0.3.0"
authors = ["Matthew Norman"]
edition = "2021"
description = "A simple text-based user interface library"
readme = "README.md"
homepage = "https://github.com/rtthw/dreg"
repository = "https://github.com/rtthw/dreg"
license = "MIT"

[features]
default = []

[dependencies]
bitflags = "2"
compact_str = "0.8"
crossterm = "0.28"
unicode-segmentation = "1"
unicode-width = "0.1"


[[example]]
name = "editor"

[[example]]
name = "quickstart"
