[package]
name = "dreg"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository = "https://github.com/rtthw/dreg/dreg"
license.workspace = true

[features]
default = []
web = ["dep:dreg-web"]

[dependencies]
dreg-core = { workspace = true }
dreg-web = { version = "0.3.0", path = "../dreg-web", optional = true }
