[package]
name = "dreg"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository = "https://github.com/rtthw/dreg/dreg"
license.workspace = true

[features]
default = ["native"]
native = []
web = []

[dependencies]
bitflags = "2"
compact_str = "0.8"
