[package]
name = "dreg-core"
version.workspace = true
edition.workspace = true
description = "Core functionality for Dreg"
homepage.workspace = true
repository = "https://github.com/rtthw/dreg/tree/master/crates/dreg-core"
license.workspace = true

[features]
underline-color = []

[dependencies]
anyhow = "1"
bitflags = "2.6.0"
compact_str = "0.8"
unicode-segmentation = "1.10.1"
unicode-width = "0.1.13"
