[package]
name = "dreg-term"
version.workspace = true
edition.workspace = true
description = "Terminal platform for Dreg"
homepage.workspace = true
repository = "https://github.com/rtthw/dreg/tree/master/crates/dreg-term"
license.workspace = true

[features]
underline-color = ["dreg-core/underline-color"]

[dependencies]
dreg-core = { workspace = true }
crossterm = "0.28"
