[package]
name = "dreg-wasm"
version.workspace = true
edition.workspace = true
description = "Web Assembly platform for Dreg"
homepage.workspace = true
repository = "https://github.com/rtthw/dreg/tree/master/crates/dreg-wasm"
license.workspace = true

[dependencies]
anyhow = "1"
dreg-core = { workspace = true }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Node",
    "Window",
] }
