[package]
name = "dreg-wasm"
version.workspace = true
edition.workspace = true
description = "Web Assembly platform for Dreg"
homepage.workspace = true
repository = "https://github.com/rtthw/dreg/tree/master/crates/dreg-wasm"
license.workspace = true

[dependencies]
anyhow = "1"
dreg-core = { workspace = true }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = [
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Document",
    "DomRect",                  # dreg_wasm::get_display_size
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "MouseEvent",
    "Node",
    "ResizeObserver",
    "ResizeObserverBoxOptions", # dreg_wasm::install_resize_observer
    "ResizeObserverEntry",      # dreg_wasm::get_display_size
    "ResizeObserverOptions",    # dreg_wasm::install_resize_observer
    "ResizeObserverSize",       # dreg_wasm::get_display_size
    "TextMetrics",
    "Window",
] }
